# PRACT3_PRODUCCION_SOFTWARE

./: .gitignore  README.md  example.py  expenses.db  main.py  pyproject.toml
.github/workflows/: ci.yml
apps/: ¡NO TOCAR!
apps/streamlit/: config.py  run.py
apps/streamlit/components/: expense_card.py  expense_form.py  expense_list.py
core/: domain_error.py  expense.py  expense_service.py  in_memory_expense_repository.py
core/no_tocar/: sqlite_expense_repository.py
core/tests/behaviour/: expense_management.feature  test_expense_steps.py
core/tests/integration/: test_expense_service.py
core/tests/unit/: test_expense.py  test_expense_repository.py
