[project]
name = "prac3-produccion-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "ruff>=0.15.2",
    "streamlit>=1.52.2",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
